--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.0
   intl: ^0.17.0
+  extended_masked_text: ^2.2.1
 
 dev_dependencies:
   flutter_test:
