--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.jpssantiago.cofrinho_digital">
    <application
-        android:label="Cofrinho Digital"
+        android:label="Cofrinho"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
