--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   extended_masked_text: ^2.2.1
   uuid: ^3.0.4
+  google_mobile_ads: ^0.13.3
 
 dev_dependencies:
   flutter_test:
